[project]
name = "bitbucket-cli"
version = "0.1.0"
description = "CLI tool to export Bitbucket Cloud pull requests to CSV"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.scripts]
bitbucket-cli = "bitbucket_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_cli"]
